Cambio: ajuste diseño control de versiones

--- a/news.html
+++ b/news.html
@@ -48,6 +48,9 @@
         ul ul li {
             list-style-type:square;
         }
+        h2 small{
+            font-size: 14px;
+        }
         </style>
     </head>
     <!--script src="//code.tidio.co/u3a9z53dec305lttpnguuh1kpcl4vqkc.js"></script-->
