Actualiza la versión 6.7.30

--- a/news.html
+++ b/news.html
@@ -96,6 +96,9 @@
                             <li>
                                 <h2>v6.7.30 <small class="text-info"><i class="icon-calendar"></i> 08/08/2021</small></h2>
                                 <ul>
+                                    <li><strong>Agrega</strong> la opción para revertir el registro de una tasa de cambio en el condominio.</li>
+                                    <li><strong>Agrega</strong> la consulta automática de la tasa de cambio del BCV al entrar a registrar la tasa de cambio del día.</li>
+                                    <li><strong>Cambio</strong> se muestran los menús: <em>Registrar tasa del día</em> y <em>Reversar tasa de cambio</em>, solo si está activa la opción de Facturación en USD.</li>
                                     <li><strong>Agrega</strong> validación en el módulo de novedades de facturación, comprueba que el gasto cargado esté registrado en el catálogo de gastos del condominio.</li>
                                     <li><strong>Corrige</strong> error al emitir el aviso de cobro cuando hay un gasto no registrado en el catálogo.</li>
                                 </ul>
