Ajuste por reconversión monetaria

--- a/news.html
+++ b/news.html
@@ -5,7 +5,7 @@
 <!--[if (gte IE 9)|!(IE)]><!-->
 <html xmlns="http://www.w3.org/1999/xhtml" lang="es"> <!--<![endif]-->
     <head prefix="og: https://ogp.me/ns# fb: https://ogp.me/ns/fb# website: https://ogp.me/ns/website#">
-        <title>Sistema Administración de Condominios Valoriza2 + WhatsApp</title>
+        <title>Sistema Administración de Condominios Release Notes</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="description" content="El sistema de administración de condominios más completo del mercado, integra un aplicación de escritorio, bajo ambiente windows más una página web, fácil, rápido y seguro" />
         <meta name="author" content="Pronet Soluciones 21" />
@@ -14,7 +14,7 @@
               software administracion, condominio, sistema administracion inmuebles parametrizable, demo sistema de administracion de condominio,
               sistema administrativo para condominios económico" />
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-        <meta name="DC.Title" content="Valoriza2 + WhatsApp" />
+        <meta name="DC.Title" content="Release Notes" />
         <meta name="DC.Description" content="El sistema de administración de condominios más completo del mercado, integra un aplicación de escritorio, bajo ambiente windows más una página web, fácil, rápido y seguro" />
         <meta name="DC.Creator" content="Egdar Messia(pronet21.com)" />
         <meta name="DC.Type" content="Software" />
@@ -22,10 +22,10 @@
         <meta name="revisit" content="1 days" />
         <meta property="og:locale" content="es_ES" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Valoriza2 + WhatsApp" />
-        <meta property="og:description" content="Ofrece un servicio exclusivo. Diferenciate de la competencia, integra WhatsApp con Valoriza2: Notificaciones de deuda, de facturación, mensajes personalizados." />
-        <meta property="og:image" content="https://www.administracion-condominio.com.ve/assets/whatsapp/valoriza_ws.png" />
-        <meta property="og:url" content="https://www.administracion-condominio.com.ve/whatsapp.html" />
+        <meta property="og:title" content="Valoriza2 Release Notes" />
+        <meta property="og:description" content="Notas de lanzamientos de las versiones de Valoriza2. Mantén tu software actualizado" />
+        <!--meta property="og:image" content="https://www.administracion-condominio.com.ve/favicon.ico" /-->
+        <meta property="og:url" content="https://www.administracion-condominio.com.ve/news.html" />
         <meta property="og:site_name" content="Sistema de Administración de Condominio Valoriza2" />
         <meta property="article:publisher" content="https://www.facebook.com/valorizavenezuela" />
         <meta property="fb:app_id" content="650100849146906"/>
@@ -93,6 +93,17 @@
                     <div class="span12">
                         
                         <ul class="unstyled">
+                            <li>
+                                <h2>v6.7.31 <small class="text-info"><i class="icon-calendar"></i> 16/09/2021</small></h2>
+                                <ul>
+                                    <li><strong>Agrega</strong> Calculadora conversor Dólares a Bs en cobranza por caja.</li>
+                                    <li><strong>Optimiza</strong> Velocidad de procesamiento general</li>
+                                    <li><strong>Optimiza</strong> Puede editar la descripción y el Tipo de Movimiento de la cobranza por caja, de una operación guardada con anterioridad.</li>
+                                    <li><strong>Corrige</strong> la manera de validar un período ya facturado. No reconocía como período facturado si el condominio tiene un solo propietario.</i>
+                                    <!--li><strong>Agrega</strong> validación en el módulo de novedades de facturación, comprueba que el gasto cargado esté registrado en el catálogo de gastos del condominio.</li>
+                                    <li><strong>Corrige</strong> error al emitir el aviso de cobro cuando hay un gasto no registrado en el catálogo.</li>-->
+                                </ul>
+                            </li>
                             <li>
                                 <h2>v6.7.30 <small class="text-info"><i class="icon-calendar"></i> 08/08/2021</small></h2>
                                 <ul>
