--- a/planes.html
+++ b/planes.html
@@ -95,11 +95,11 @@ Más que un sistema, es una plataforma completa para la administración de condo
 <p>Ideal para la auto-gestión de Edificios/PH o emprendedores que inician en la actividad de
 la Administración de Condominios. Con una mínima inversión adquiera la plataforma Valoriza2.</p>
 <hr />
-<h3 class="ac">Soporte Premium<small> (Opcional)</small><br>Bs.<span id="alquiler">2.310.000</span> ó $30 Mensual
+<h3 class="ac">Soporte Prémium<small> (Opcional)</small><br>Bs.<span id="alquiler">2.310.000</span> ó $30 Mensual
 </h3>
 <hr />
 <p class="ac">
-Precios anclados a la cotización del dolar (Dolartoday)<br>Tasa del día: <strong class="tasa_del_dia">0</strong>
+Precios anclados a la cotización del dólar (Dolartoday)<br>Tasa del día: <strong class="tasa_del_dia">0</strong>
 </p>
 </div>
 </div>
@@ -116,7 +116,7 @@ Precios anclados a la cotización del dolar (Dolartoday)<br>Tasa del día: <stro
 <li>&#10004; Módulo correo electrónico</li>
 <li>&#10004; Módulo envío WhatsApp</li>
 <li>&#10004; Módulo envío de SMS</li>
-<li>&#10004; Respaldo automátizados</li>
+<li>&#10004; Respaldo automatizado</li>
 <li>&#10004; Envío avisos de cobro vía e-mail</li>
 <li>&#10004; Envío recibos vía e-mail</li>
 <li>&#10004; Envío programado Avisos de Cobro vía e-mail</li>
@@ -128,11 +128,11 @@ Precios anclados a la cotización del dolar (Dolartoday)<br>Tasa del día: <stro
 Incluye funciones avanzadas para el envío programado de los avisos de cobro, 
 respaldo programado de datos y actualización de datos del complemento web.</p>
 <hr />
-<h3 class="ac">Soporte Premium <small>(Opcional)</small><br>Bs.<span id="precio">2.130.000</span> ó $30 Mensual
+<h3 class="ac">Soporte Prémium <small>(Opcional)</small><br>Bs.<span id="precio">2.130.000</span> ó $30 Mensual
 </h3>
 <hr />
 <p class="ac">
-Precios anclados a la cotización del dolar (Dolartoday)<br>Tasa del día: <strong class="tasa_del_dia">0</strong>
+Precios anclados a la cotización del dólar (Dolartoday)<br>Tasa del día: <strong class="tasa_del_dia">0</strong>
 </p>
 </div>
 </div>
@@ -164,7 +164,7 @@ una cuota mensual. Incluye el módulo de facturación en dólares, el módulo de
 servicio de condominio en línea, soporte premium y todas las actualizaciones del software sin costo adicional.</p>
 <hr />
 <p class="ac">
-Precios anclados a la cotización del dolar (Dolartoday)<br>Tasa del día: <strong class="tasa_del_dia">0</strong>
+Precios anclados a la cotización del dólar (Dolartoday)<br>Tasa del día: <strong class="tasa_del_dia">0</strong>
 </p>
 </div>
 </div>
