--- a/whatsapp.html
+++ b/whatsapp.html
@@ -118,7 +118,7 @@
                         <li>Sistema Valoriza2.</li>
                     </ol>
                     <h2>Precio</h2>
-                    <p><strong>Mensual</strong>: <span style="background-color: #fc9362; color: #fff">12$ o los Bs. equivalentes a la tasa del día.</span></p>
+                    <p><strong>Mensual</strong>: <span style="background-color: #fc9362; color: #fff">12$/Mes o los Bs/Mes. equivalentes a la tasa del día.</span></p>
                     <p><strong>**Mensajes ilimitados.</strong></p>
                     </div>
                 </div>
