--- a/news.html
+++ b/news.html
@@ -94,14 +94,21 @@
                         
                         <ul class="unstyled">
                             <li>
+                                <h2>v6.7.32 <small class="text-info"><i class="icon-calendar"></i> 14/11/2021</small></h2>
+                                <ul>
+                                    <li><strong>Optimiza</strong> Asignación de pagos.</li>
+                                    <li><strong>Modifica</strong> Transferencia como opción por defecto, pago a proveedores.</li>
+                                    <li><strong>Modifica</strong> Se ordena la lista de cheques y transferencias por fecha en orden descendente.</li>
+                                    <li><strong>Corrige</strong> error problema en el saldo de las facturas en el proceso de reverso de pago.</i>
+                                </ul>
+                            </li>
+                            <li>
                                 <h2>v6.7.31 <small class="text-info"><i class="icon-calendar"></i> 16/09/2021</small></h2>
                                 <ul>
                                     <li><strong>Agrega</strong> Calculadora conversor Dólares a Bs en cobranza por caja.</li>
                                     <li><strong>Optimiza</strong> Velocidad de procesamiento general</li>
                                     <li><strong>Optimiza</strong> Puede editar la descripción y el Tipo de Movimiento de la cobranza por caja, de una operación guardada con anterioridad.</li>
                                     <li><strong>Corrige</strong> la manera de validar un período ya facturado. No reconocía como período facturado si el condominio tiene un solo propietario.</i>
-                                    <!--li><strong>Agrega</strong> validación en el módulo de novedades de facturación, comprueba que el gasto cargado esté registrado en el catálogo de gastos del condominio.</li>
-                                    <li><strong>Corrige</strong> error al emitir el aviso de cobro cuando hay un gasto no registrado en el catálogo.</li>-->
                                 </ul>
                             </li>
                             <li>
