FIX error ortografico news.html version 6.7.34

--- a/news.html
+++ b/news.html
@@ -94,6 +94,24 @@
                         
                         <ul class="unstyled">
                             <li>
+                                <h2>v6.7.34 <small class="text-info"><i class="icon-calendar"></i> 10/02/2021</small></h2>
+                                <ul>
+                                    <li><strong>Corrige</strong> el lista de propietarios, para seleccionar destinatarios, para el envío de WhatsApp, se estaban mostrando
+                                        solo los propietarios con correo electrónico registrado.</i> 
+                                    <li><strong>Corrige</strong> error que al descargar pagos web, estos estaban quedando "pendientes" en la lista.</i>
+                                    <li><strong>Modifica</strong> módulo de activación de producto. Se requiere activar nuevamente luego de esta actualización</li>
+                                    <li><strong>Optimiza</strong> tamaño de la aplicación. Módulo de cobranza por caja</li>
+                                </ul>
+                            </li>
+                            <li>
+                                <h2>v6.7.33 <small class="text-info"><i class="icon-calendar"></i> 14/01/2021</small></h2>
+                                <ul>
+                                    <li><strong>Modifica</strong> Optimiza el proceso de envío de avisos de cobro en forma masiva, ahora es más rápido.</li>
+                                    <li><strong>Agrega</strong> la posibilidad de activar la indexación cuando la tasa va a la baja.</li>
+                                    <li><strong>Corrige</strong> error al reversar la última tasa de cambio, no estaba afectando el monto en Bs de los abonos a futuro.</i>
+                                </ul>
+                            </li>
+                            <li>
                                 <h2>v6.7.32 <small class="text-info"><i class="icon-calendar"></i> 14/11/2021</small></h2>
                                 <ul>
                                     <li><strong>Optimiza</strong> Asignación de pagos.</li>
