--- a/news.html
+++ b/news.html
@@ -94,7 +94,25 @@
                         
                         <ul class="unstyled">
                             <li>
-                                <h2>v6.7.34 <small class="text-info"><i class="icon-calendar"></i> 10/02/2021</small></h2>
+                                <h2>v6.8.36 <small class="text-info"><i class="icon-calendar"></i> 05/02/2023</small></h2>
+                                <ul>
+                                    <li><strong>Corrige</strong> !Importante 🚑 aplicación de los montos correspondientes a los recibos, durante el proceso
+                                        de descarga de los pagos registrados por la web.</i> 
+                                </ul>
+                            </li>
+                            <li>
+                                <h2>v6.8.15 <small class="text-info"><i class="icon-calendar"></i> 23/10/2022</small></h2>
+                                <ul>
+                                    <li><strong>Agrega</strong> la funcion que al reversar la facturación se sincroniza la página web, al momento, con los datos resultantes
+                                        del reverso.</i> 
+                                    <li><strong>Agrega</strong> la posibilidad de configurar la cancelación de gastos con el símbolo de la moneda principal del condominio y
+                                    el tipo de propiedad del condominio.</i>
+                                    <!--li><strong>Modifica</strong> módulo de activación de producto. Se requiere activar nuevamente luego de esta actualización</li>
+                                    <li><strong>Optimiza</strong> tamaño de la aplicación. Módulo de cobranza por caja</li!-->
+                                </ul>
+                            </li>
+                            <li>
+                                <h2>v6.7.34 <small class="text-info"><i class="icon-calendar"></i> 10/02/2022</small></h2>
                                 <ul>
                                     <li><strong>Corrige</strong> el lista de propietarios, para seleccionar destinatarios, para el envío de WhatsApp, se estaban mostrando
                                         solo los propietarios con correo electrónico registrado.</i> 
