--- a/whatsapp.html
+++ b/whatsapp.html
@@ -117,8 +117,9 @@
                                 <a href="https://soporte.administracion-condominio.com.ve/?topic=10&item=37" target="_blank">Puedes hacer la carga masiva con Valoriza2</a></li>
                         <li>Sistema Valoriza2.</li>
                     </ol>
-                    <h2>Precio</h2>
+                    <h2>Precio*</h2>
                     <p><strong>Mensual</strong>: <span style="background-color: #fc9362; color: #fff">12$/Mes o los Bs/Mes. equivalentes a la tasa del día.</span></p>
+                    <p><strong>*Precio por computadora.</strong></p>
                     <p><strong>**Mensajes ilimitados.</strong></p>
                     </div>
                 </div>
